# speed-limit-rust

./: .gitignore  Cargo.toml  README.md  build.bat  check_log.txt  check_short.txt  file_list.txt  implementation_plan.md  speed-limit-config.json  traffic_shaper.py
.github/workflows/: build.yml
docs/: index.html
src/: admin.rs  app.rs  config.rs  main.rs  process_monitor.rs  traffic_shaper.rs
