[package]
name = "speed-limit"
version = "0.1.0"
edition = "2021"
description = "Windows 全域頻寬限制器 - 使用 WinDivert 進行流量整形"

[dependencies]
eframe = "0.31"
windivert = "0.6"
windivert-sys = { version = "0.10", features = ["vendored"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
